<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">广西国有七坡林场</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，应用程序出现错误，即将退出。\n请提交错误报告，我们会尽快修复这个问题！</string>
    <string name="app_error_relogin">很抱歉，应用程序出现错误，即将退出重启应用！</string>
    <string name="submit_report">提交报告</string>
    <string name="app_menu_surelogout">确定退出程序吗？</string>
    <string name="sure">确定</string>
    <string name="cancle">取消</string>
    <string name="home">首页</string>
    <string name="patro">巡护</string>
    <string name="Survey">调查</string>
    <string name="knowledge">知识库</string>
    <string name="setting">设置</string>
    <string name="message">消息</string>
    <string name="system">系统</string>
    <string name="contentDescription_tonggao">通告图片描述</string>
    <string name="contentDescription_ic_findanimal">发现动物图标</string>
    <string name="contentDescription">图片资源描述</string>
    <string name="animal">动物</string>
    <string name="plant">植物</string>
    <string name="pest">微生物</string>
    <string name="interfere">人为干扰</string>
    <string name="facility">设施</string>
    <string name="findanimal">发现动物</string>
    <string name="showanimal">查看动物</string>
    <string name="addanimal">添加动物</string>
    <string name="editanimal">编辑动物</string>
    <string name="hasfindanimal">已发现动物:</string>
    <string name="hasfindplant">已发现植物:</string>
    <string name="hasfindpest">已发现病虫害:</string>
    <string name="hasfindinterfere">已发现干扰:</string>
    <string name="hasfindfacility">已发现设施:</string>
    <string name="hasfindevent">已发现突发事件:</string>
    <string name="findplant">发现植物</string>
    <string name="findinterfere">发现干扰</string>
    <string name="findpest">发现病虫害</string>
    <string name="findfacility">发现设施</string>
    <string name="eventhappen">突发事件</string>
    <string name="location">定位</string>
    <string name="navigation">导航</string>
    <string name="showtrack">轨迹</string>
    <string name="friends">队友</string>
    <string name="camera">随拍</string>
    <string name="find">发现</string>
    <string name="historytrack">历史轨迹</string>
    <string name="erwei">二维</string>
    <string name="Satellite">卫星</string>
    <string name="hasfind">已发现</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>
    <string name="load_more">更多</string>
    <string name="load_ing">加载中···</string>
    <string name="load_full">已加载全部</string>
    <string name="load_empty">暂无数据</string>
    <string name="load_error">加载数据出错</string>
    <string name="new_data_toast_message">有 %d 条更新</string>
    <string name="new_data_toast_none">没有新更新</string>
    <string name="finddate">发现于</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="track">跟踪</string>
    <string name="trackandlocation">定位跟踪</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="about">About</string>
    <string name="main_menu">Home</string>
    <string name="contact">Contact</string>
    <string name="about_body">Radial Menu Demo Version 1 by Arindam Nath.</string>
    <string name="contact_body">Contact Details Here!</string>
    <string name="main_body">Long press any part of the screen to bring up radial menu.</string>
    <string name="open_menu">Open Menu</string>
    <string name="normal">Normal</string>
    <string name="expandable">Expandable</string>
    <string name="close">Close</string>
    <string name="stoppatrol">结束巡护</string>
    <string name="continuepatrol">继续</string>

    <string-array name="main_menu">
        <item>Radial Menu V1</item>
        <item>Radial Menu V2</item>
        <item>Radial Progress</item>
        <item>Semi Circular Radial Menu</item>
    </string-array>

    <string name="image"> 图片 </string>
    <string name="video"> 视频</string>
    <string name="luyin"> 录音 </string>
    <string name="images_tab"> Images </string>
    <string name="videos_tab"> Videos </string>
    <string name="max_limit_reach_error"> Max limit 10 file. </string>
    <string name="max_limit_file"> Max limit </string>
    <string name="please_wait_text">请稍等</string>
    <string name="file_size_exeeded"> The file size exceeds the maximum limit of </string>
    <string name="selected_file_size">  Selected media size is : </string>
    <string name="mb"> MB</string>
    <string name="plaese_select_file"> Please select a file.</string>
    <string name="file"> file. </string>
    <string name="files"> files. </string>
    <string name="no_media_file_available"> No media file available.</string>

</resources>