<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_round_border_black"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btn_plant"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@null"
        android:text="@string/plant"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#dcdc" />

    <Button
        android:id="@+id/btn_animal"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@null"
        android:text="@string/animal"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#dcdc" />

    <Button
        android:id="@+id/btn_pest"
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="@null"
        android:text="@string/pest"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dip"
        android:background="#dcdc" />

</LinearLayout>