<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_popupwindow"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/popuwindow_height"
        android:layout_marginTop="15dip"
        android:orientation="horizontal" >

        <TableLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imgbtn_home"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_track" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/historytrack"
                android:textColor="@color/popupwindow_textcolor"
                android:textSize="@dimen/home_menu_textsize" />
        </TableLayout>

        <TableLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imgbtn_patrol"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_friends" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/friends"
                android:textColor="@color/popupwindow_textcolor"
                android:textSize="@dimen/home_menu_textsize" />
        </TableLayout>

        <TableLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imgbtn_message"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_hasfind" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/hasfind"
                android:textColor="@color/popupwindow_textcolor"
                android:textSize="@dimen/home_menu_textsize" />
        </TableLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/popuwindow_height"
        android:layout_marginBottom="20dip"
        android:layout_marginTop="15dip"
        android:orientation="horizontal" >

        <TableLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_navigation" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/navigation"
                android:textColor="@color/popupwindow_textcolor"
                android:textSize="@dimen/home_menu_textsize" />
        </TableLayout>

        <TableLayout
            android:id="@+id/tl_satellite"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_satellite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/Satellite"
                android:textColor="@color/popupwindow_textcolor"
                android:textSize="@dimen/home_menu_textsize" />
        </TableLayout>

        <TableLayout
            android:id="@+id/tl_erwei"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:background="@null"
                android:clickable="false"
                android:contentDescription="@string/contentDescription"
                android:src="@drawable/ic_erwei" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/erwei"
                android:textColor="@color/popupwindow_textcolor"
                android:textSize="@dimen/home_menu_textsize" />
        </TableLayout>
    </LinearLayout>

</LinearLayout>