<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical"
    android:paddingLeft="15dip"
    android:paddingRight="15dip" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_review"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/trackandlocation"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_12" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dip"
                android:layout_marginLeft="10dip"
                android:src="@drawable/ic_next" />
        </LinearLayout>

        <TextView
            android:id="@+id/status_review"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="审核中"
            android:textColor="@color/red"
            android:textSize="@dimen/date_textsize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/img_animal"
            android:layout_width="@dimen/width_imgage_inlist"
            android:layout_height="@dimen/height_imgage_inlist" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_imgage_inlist"
            android:layout_marginLeft="15dip"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginTop="10dip"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/news_listitem_flag"
                    android:layout_width="14.0dip"
                    android:layout_height="14.0dip"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="2dip"
                    android:src="@drawable/widget_today_icon"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/news_listitem_commentCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="2dip"
                    android:text="2015-12-25"
                    android:textSize="@dimen/date_textsize" />

                <TextView
                    android:id="@+id/news_listitem_title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/news_listitem_commentCount"
                    android:layout_toRightOf="@id/news_listitem_flag"
                    android:singleLine="true"
                    android:textColor="@color/listitem_black"
                    android:textSize="@dimen/text_size_15" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:scrollbarStyle="outsideInset"
                android:text="毛色浅黄或棕黄色，满有黑色横纹；头圆、耳短，耳背面黑色，中央有一白斑甚显著；四肢健壮有力；尾粗长，具黑色环纹，尾端黑色。"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/news_listitem_author"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_10" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dip"
                    android:gravity="center"
                    android:text="@string/finddate"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_10" />

                <TextView
                    android:id="@+id/news_listitem_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2dip"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_10" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="@dimen/width_imgbtn_eidt"
            android:layout_height="@dimen/height_imgbtn_edit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dip"
            android:background="@drawable/shape_round_edit"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_edit_textsize" />
    </RelativeLayout>

</LinearLayout>